# gait-modelfitting

./: bibtex.bib  dodates.sh  qfileiconprovider.patch
contourtest/: contourtest.pro
contourtest/src/: contour.cpp  contour.h  main.cpp  src.pro
docs/brief/: brief.tex  briefsubmission.ps
docs/interim/: background.tex  goals.tex  interim.tex  remainingwork.tex  technical.tex
docs/oldsource/: ThighFilter.m
docs/papers/: cohenballoons.ps
docs/report/: appendix-devdocs.tex  appendix-dvd.tex  appendix-listings.tex  appendix-manual.tex  appendix-moregraphs.tex  appendix-time.tex  background.tex  design-application.tex  design-classification.tex  design-gpu.tex  design-mesh.tex  design-model.tex  design-optimisation.tex  design-preprocessing.tex  design-snakes.tex  futurework.tex  intro-background.tex  intro-goals.tex  intro-literature.tex  intro-overview.tex  report.tex  results-classification.tex  results-comparison.tex  results-conclusion.tex  results-modelfitting.tex  theory.tex  timeplan.planner
docs/summary/: summary.tex
docs/viva/: viva.odp
gaitdata/: cleansmall.sh
gaitdata-multires/: readme.txt
gaitdata-multires/100/: voxel_0043.Zspc.info  voxel_0046.Zspc.info  voxel_0048.Zspc.info  voxel_0049.Zspc  voxel_0049.Zspc.info  voxel_0050.Zspc.info  voxel_0052.Zspc.info  voxel_0054.Zspc  voxel_0055.Zspc  voxel_0056.Zspc  voxel_0058.Zspc  voxel_0058.Zspc.info  voxel_0061.Zspc.info  voxel_0062.Zspc.info  voxel_0065.Zspc  voxel_0067.Zspc.info  voxel_0069.Zspc.info  voxel_0070.Zspc.info  voxel_0072.Zspc.info  voxel_0073.Zspc.info  voxel_0074.Zspc  voxel_0074.Zspc.info  voxel_0075.Zspc  voxel_0076.Zspc  voxel_0079.Zspc.info  voxel_0080.Zspc  voxel_0082.Zspc.info  voxel_0083.Zspc.info  voxel_0085.Zspc.info  voxel_0086.Zspc  voxel_0088.Zspc.info  voxel_0089.Zspc  voxel_0090.Zspc.info  voxel_0091.Zspc.info  voxel_0094.Zspc.info  voxel_0095.Zspc.info  voxel_0097.Zspc.info  voxel_0098.Zspc  voxel_0099.Zspc.info  voxel_0100.Zspc.info  (+11 more)
gaitdata-multires/101/: voxel_0042.Zspc.info  voxel_0043.Zspc  voxel_0043.Zspc.info  voxel_0044.Zspc.info  voxel_0045.Zspc.info  voxel_0046.Zspc  voxel_0046.Zspc.info  voxel_0047.Zspc.info  voxel_0048.Zspc  voxel_0048.Zspc.info  voxel_0049.Zspc  voxel_0049.Zspc.info  voxel_0050.Zspc  voxel_0051.Zspc  voxel_0051.Zspc.info  voxel_0054.Zspc.info  voxel_0055.Zspc  voxel_0056.Zspc  voxel_0056.Zspc.info  voxel_0057.Zspc  voxel_0057.Zspc.info  voxel_0060.Zspc  voxel_0061.Zspc.info  voxel_0062.Zspc.info  voxel_0063.Zspc  voxel_0063.Zspc.info  voxel_0065.Zspc.info  voxel_0066.Zspc.info  voxel_0067.Zspc  voxel_0067.Zspc.info  voxel_0068.Zspc.info  voxel_0069.Zspc.info  voxel_0071.Zspc  voxel_0072.Zspc.info  voxel_0074.Zspc  voxel_0074.Zspc.info  voxel_0075.Zspc.info  voxel_0079.Zspc.info  voxel_0082.Zspc.info  voxel_0084.Zspc.info  (+20 more)
gaitdata-multires/102/: voxel_0041.Zspc.info  voxel_0042.Zspc.info  voxel_0043.Zspc.info  voxel_0044.Zspc.info  voxel_0047.Zspc  voxel_0049.Zspc.info  voxel_0050.Zspc.info  voxel_0052.Zspc.info  voxel_0053.Zspc  voxel_0054.Zspc  voxel_0056.Zspc  voxel_0057.Zspc.info  voxel_0061.Zspc.info  voxel_0062.Zspc.info  voxel_0063.Zspc.info  voxel_0064.Zspc  voxel_0068.Zspc  voxel_0069.Zspc.info  voxel_0071.Zspc.info  voxel_0072.Zspc.info  voxel_0075.Zspc.info  voxel_0076.Zspc.info  voxel_0079.Zspc  voxel_0079.Zspc.info  voxel_0080.Zspc  voxel_0080.Zspc.info  voxel_0082.Zspc.info  voxel_0088.Zspc.info  voxel_0094.Zspc.info  voxel_0095.Zspc.info  voxel_0098.Zspc.info  voxel_0099.Zspc.info  (+6 more)
gaitdata-res10/: cleansmall.sh  readme.txt
gaitdata-res20/: metadata.csv  readme.txt
imgprocessingtest/: CMakeLists.txt
imgprocessingtest/CMake/: FindCG.cmake
imgprocessingtest/shaders/basic/: frag.cg
imgprocessingtest/shaders/intensityGradient/: vert.cg
imgprocessingtest/src/: CMakeLists.txt  canny.cpp  chainfilterset.cpp  chainfilterset.h  controller.h  dataunit.h  engine.cpp  filterset.cpp  filterset.h  gaussian.h  intensitygradient.cpp  shaderpair.h
manualfitcomp/: CMakeLists.txt  main.cpp
modelfitting/: CMakeLists.txt  Info.plist  analysis.cpp  analysis.h  frameinfo.h  glview.cpp  glview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mkbundle.sh  mkdmg.make
modelfitting/CMake/: Copyright.txt
modelfitting/common/: CMakeLists.txt  glwin.cpp  makeglwin.py  opengl.cpp  opengl.h
modelfitting/data/: meshsearch.lut  resources.qrc  savefft.g  savegraph.g  savetime.g  showfft.g  showgraph.g  showtime.g
modelfitting/debian/: changelog  control  copyright  dirs  files  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  wrapper.sh
modelfitting/filters/: PlotThighFilter.m  ThighFilter.m  c_export.py  thigh.filter  thighmodel.blend  thighmodel.cpp
modelfitting/mac/: mkbundle.sh  mkdmg.make  qt.conf
modelfitting/shaders/: convolution.cg  pp_pass0.glsl  pp_pass1.glsl  pp_pass2.glsl  pp_pass3.glsl  pp_pass4.glsl  shaders.qrc  voxels_frag.glsl  voxels_vert.glsl
modelfitting/src/: CMakeLists.txt  batchmode.cpp  batchmode.h  classifydialog.cpp  classifydialog.h  classifydialog.ui  convolution.cpp  convolution.h  curvefitter.cpp  curvefitter.h  energyplotter.cpp  energyplotter.h  errorcorrection.cpp  errorcorrection.h  errorcorrection.ui  fft.cpp  fft.h  fftplotter.cpp  fftplotter.h  filter.cpp  filter.h  frameinfo.cpp  frameinfo.h  frameset.cpp  frameset.h  glview.cpp  glview.h  graphplotter.cpp  graphplotter.h  graphplotter.ui  imgprocessing.cpp  imgprocessing.h  listmodels.cpp  listmodels.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapreduceprogress.cpp  mapreduceprogress.h  (+19 more)
modelfitting/vis4d/: CMakeLists.txt  glwin.cpp  glwin.h  image.cc  image.hh  image_png.cc  makeglwin.py  mesh.cc  mesh.hh  mesh_gl.cc  mesh_scene.cc  points.cc  points.hh  scene.cc  scene.hh  util.cc  util.hh  vfield.cc  vfield.hh  vspace.cc  vspace.hh
src/: CMakeLists.txt  canny.cpp  canny.h  controller.cpp  controller.h  controller.ui  dataunit.cpp  dataunit.h  engine.cpp  engine.h  filterset.h  gaussian.cpp  gaussian.h  intensitygradient.cpp  intensitygradient.h  main.cpp  mainwindow.cpp  mainwindow.h  shaderpair.cpp  shaderpair.h
(+10339 files in other folders)
