PROJECT (manualfitcomp)

# Find Qt
FIND_PACKAGE(Qt4 REQUIRED)

# Find Qt stuff
ADD_DEFINITIONS(${QT_DEFINITIONS})
LINK_DIRECTORIES(${QT_LIBRARY_DIR})
INCLUDE_DIRECTORIES(${QT_INCLUDES} ${FFTW_INCLUDE_PATH})



# Source files
SET(MANUALFITCOMP-SOURCES
	main.cpp
)

# Header files that have Q_OBJECT in
SET(MANUALFITCOMP-MOC-HEADERS
)

# UI files
SET(MANUALFITCOMP-UI
)

# Resource files
SET(MANUALFITCOMP-RESOURCES
)


QT4_WRAP_CPP(MANUALFITCOMP-SOURCES-MOC ${MANUALFITCOMP-MOC-HEADERS})
QT4_WRAP_UI(MANUALFITCOMP-SOURCES-UI ${MANUALFITCOMP-UI})
QT4_ADD_RESOURCES(MANUALFITCOMP-SOURCES-RESOURCE ${MANUALFITCOMP-RESOURCES})

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_BINARY_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}
)

ADD_EXECUTABLE(manualfitcomp ${MANUALFITCOMP-SOURCES} ${MANUALFITCOMP-SOURCES-MOC} ${MANUALFITCOMP-SOURCES-UI} ${MANUALFITCOMP-SOURCES-RESOURCE})

TARGET_LINK_LIBRARIES(manualfitcomp
	${QT_QTCORE_LIBRARY}
	${QT_QTGUI_LIBRARY}
)
