# Source files
SET(IMGPROCESSTEST-SOURCES
	main.cpp
	engine.cpp
	shaderpair.cpp
	controller.cpp
)

# Header files that have Q_OBJECT in
SET(IMGPROCESSTEST-MOC-HEADERS
	engine.h
	controller.h
)

# UI files
SET(IMGPROCESSTEST-UI
	controller.ui
)

# Resource files
SET(IMGPROCESSTEST-RESOURCES
)

SET (EXECUTABLE_OUTPUT_PATH ..)

QT4_WRAP_CPP(IMGPROCESSTEST-SOURCES-MOC ${IMGPROCESSTEST-MOC-HEADERS})
QT4_WRAP_UI(IMGPROCESSTEST-SOURCES-UI ${IMGPROCESSTEST-UI})
QT4_ADD_RESOURCES(IMGPROCESSTEST-SOURCES-RESOURCE ${IMGPROCESSTEST-RESOURCES})

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_BINARY_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}
	${CG_INCLUDE_PATH}
	${OPENGL_INCLUDE_DIR}
)

ADD_EXECUTABLE(imgprocesstest ${IMGPROCESSTEST-SOURCES} ${IMGPROCESSTEST-SOURCES-MOC} ${IMGPROCESSTEST-SOURCES-UI} ${IMGPROCESSTEST-SOURCES-RESOURCE})

TARGET_LINK_LIBRARIES(imgprocesstest
	${QT_QTCORE_LIBRARY}
	${QT_QTGUI_LIBRARY}
	${QT_QTOPENGL_LIBRARY}
	${QT_QTXML_LIBRARY}
	${QT_QTNETWORK_LIBRARY}
	${CG_LIBRARY}
	${CG_GL_LIBRARY}
	${OPENGL_LIBRARIES}
)

INSTALL(TARGETS imgprocesstest
	RUNTIME DESTINATION bin)
