# cmake file for libV4D

OPTION(USE_OPTIMISED_MORPHOLOGY "Compile optimised routines for binary morphology" ON)

FIND_PACKAGE(ZLIB REQUIRED)
FIND_PACKAGE(PNG REQUIRED)

INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${PNG_INCLUDE_DIR})

SET(SRC_FILES image.cc image_png.cc mesh.cc mesh_scene.cc points.cc scene.cc util.cc vfield.cc vspace.cc mesh_gl.cc glwin.cpp)
IF (USE_OPTIMISED_MORPHOLOGY)
    MESSAGE(INFO, "Using optimised morphology routines")
    SET (SRC_FILES ${SRC_FILES} vspace_fast_dilate.cc vspace_fast_erode.cc) 
ELSE (USE_OPTIMISED_MORPHOLOGY)
    MESSAGE(INFO, "NOT using optimised morphology routines")
ENDIF (USE_OPTIMISED_MORPHOLOGY)

ADD_LIBRARY(V4D STATIC ${SRC_FILES})

IF (USE_OPTIMISED_MORPHOLOGY)
    SET_TARGET_PROPERTIES(V4D PROPERTIES COMPILE_FLAGS "-D_VSPACE_USE_OPTIMISED_DILATE -D_VSPACE_USE_OPTIMISED_ERODE")
ENDIF (USE_OPTIMISED_MORPHOLOGY)

SET_TARGET_PROPERTIES(V4D PROPERTIES VERSION "0")
